[package]
name = "roadsim2d"
version = "0.1.0"
authors = ["clynamen <clynamen@gmail.com>"]
edition = "2018"

[dependencies]
piston = "*"
piston_window = "*"
piston2d-graphics  = "*"
cgmath = "*"
rand = "*"
rosrust = "0.7"
rosrust_codegen = "0.7"
serde = "*"
serde_derive = "*"
euclid = "*"
conrod = "*"
floating-duration = "0.1.2"
nalgebra = "0.16.11"

[build-dependencies]
rosrust_codegen = "*"

[lib]
name = "roadsim2dlib"
path = "src/lib.rs"
